add human code and first prompt

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Train</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
