add print document and replace < and > on the two else if with <= and >=

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Train</title>
 </head>
 <body>
+    <p id="ticketcalculator"></p>
     <script src="JS/script.js"></script>
 </body>
 </html>
